switch to phonemizer-less

--- a/synthesis.ipynb
+++ b/synthesis.ipynb
@@ -83,7 +83,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "print(torch.cuda.is_available())\n",
+    "\n",
+    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cpu\")"
    ]
   },
   {
@@ -101,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MATCHA_CHECKPOINT = get_user_data_dir()/\"matcha_ljspeech.ckpt\"\n",
-    "HIFIGAN_CHECKPOINT = get_user_data_dir() / \"hifigan_T2_v1\"\n",
+    "MATCHA_CHECKPOINT = \"logs/train/ljspeech/runs/2025-08-08_15-50-39/checkpoints/last.ckpt\"\n",
+    "HIFIGAN_CHECKPOINT = \"hifigan_T2_v1\"\n",
     "OUTPUT_FOLDER = \"synth_output\""
    ]
   },
@@ -192,7 +195,7 @@
    "source": [
     "@torch.inference_mode()\n",
     "def process_text(text: str):\n",
-    "    x = torch.tensor(intersperse(text_to_sequence(text, ['english_cleaners2'])[0], 0),dtype=torch.long, device=device)[None]\n",
+    "    x = torch.tensor(intersperse(text_to_sequence(text, ['basic_cleaners'])[0], 0),dtype=torch.long, device=device)[None]\n",
     "    x_lengths = torch.tensor([x.shape[-1]],dtype=torch.long, device=device)\n",
     "    x_phones = sequence_to_text(x.squeeze(0).tolist())\n",
     "    return {\n",
