switch back to using phonemes, use misaki phonemizer, add extra phoneme for misaki, and update english_cleaners2
use misaki phonemizer and update english_cleaners2

fixup! use misaki phonemizer and update english_cleaners2

--- a/synthesis.ipynb
+++ b/synthesis.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "@torch.inference_mode()\n",
     "def process_text(text: str):\n",
-    "    x = torch.tensor(intersperse(text_to_sequence(text, ['basic_cleaners'])[0], 0),dtype=torch.long, device=device)[None]\n",
+    "    x = torch.tensor(intersperse(text_to_sequence(text, ['english_cleaners2'])[0], 0),dtype=torch.long, device=device)[None]\n",
     "    x_lengths = torch.tensor([x.shape[-1]],dtype=torch.long, device=device)\n",
     "    x_phones = sequence_to_text(x.squeeze(0).tolist())\n",
     "    return {\n",
