use HiFi-GAN v3 in synthesis.ipynb

--- a/synthesis.ipynb
+++ b/synthesis.ipynb
@@ -52,7 +52,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "# Hifigan imports\n",
-    "from matcha.hifigan.config import v1\n",
+    "from matcha.hifigan.config import v1, v3\n",
     "from matcha.hifigan.denoiser import Denoiser\n",
     "from matcha.hifigan.env import AttrDict\n",
     "from matcha.hifigan.models import Generator as HiFiGAN\n",
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "MATCHA_CHECKPOINT = \"logs/train/ljspeech/runs/2025-08-08_15-50-39/checkpoints/last.ckpt\"\n",
-    "HIFIGAN_CHECKPOINT = \"hifigan_T2_v1\"\n",
+    "HIFIGAN_CHECKPOINT = \"hifi-gan/upstream-trained-models/LJ_FT_T2_V3/generator_v3\"\n",
     "OUTPUT_FOLDER = \"synth_output\""
    ]
   },
@@ -167,7 +167,7 @@
    ],
    "source": [
     "def load_vocoder(checkpoint_path):\n",
-    "    h = AttrDict(v1)\n",
+    "    h = AttrDict(v3)\n",
     "    hifigan = HiFiGAN(h).to(device)\n",
     "    hifigan.load_state_dict(torch.load(checkpoint_path, map_location=device)['generator'])\n",
     "    _ = hifigan.eval()\n",
